Bug 552163 [OOPP]Can not start scroll page by mouse wheel when mouse cursor is over a flash video. r=jim